# life-game

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake.yml
include/: config.h.in  game.h  screen.h  screen_cli.h  screen_ncurses.h  screen_sdl.h
include/screen/: creator.h  factory.h
src/: game.cpp  main.cpp  screen.cpp  screen_cli.cpp  screen_ncurses.cpp  screen_sdl.cpp
src/screen/: factory.cpp
test/: CMakeLists.txt  game_test.cpp  screen_cli_test.cpp  screen_ncurses_test.cpp  screen_test.cpp
